--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 - task: ShellScript@2
   inputs:
-    scriptPath: 
+    scriptPath: 'snapshot.sh'
     #args: '' # Optional
     #disableAutoCwd: false # Optional
     #cwd: '' # Optional
